expand getlinks to api
